--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Twitter Clone{% endblock %}</title>
 </head>
+
 <body>
-  <!-- header  -->
+  <!-- header -->
   <header class="mb-3">
+    {% if user.is_authenticated %}
     <nav>
       <ul>
-				<li><a href="{% url 'welcome:welcome' %}">Twitter Clone</a></li>
-        <li><a href="{% url 'accounts:signup' %}">Sign up</a></li>
+        <li><a href="{% url 'welcome:welcome' %}">Twitter Clone</a></li>
+        <li><a href="{% url 'accounts:logout' %}">logout</a></li>
       </ul>
     </nav>
+    {% else %}
+    <li><a href="{% url 'accounts:signup' %}">Sign up</a></li>
+    <li><a href="{% url 'welcome:welcome' %}">Twitter Clone</a></li>
+    <li><a href="{% url 'accounts:login' %}">login</a></li>
+    {% endif %}
   </header>
-  <!-- /header  -->
+  <!-- /header -->
 
-  <!-- main  -->
-  <main>
+  <!-- main -->
   {% block content %}
   {% endblock %}
-  </main>
-  <!-- /main  -->
+  <!-- /main -->
 </body>
+
 </html>
