--- a/templates/tweets/home.html
+++ b/templates/tweets/home.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %}title{% endblock %}
 
 {% block content %}
 <h1>homeです</h1>
+<li><a href="{% url 'accounts:user_profile' request.user %}">あなたのプロフィール</a></li>
+<h1>ツイート一覧</h1>
+<ul>
+    {% for tweet in tweets %}
+        <li>{{ tweet.content }}</li>
+    {% endfor %}
+</ul>
 {% endblock %}
+</form>
