--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<h2>{{ user.username }}のページ</h2>
+<h2>{{ profile_user }}のページ</h2>
     <br>
     <h3>過去のツイート</h3>
-{% for tweet in tweets %}
-        <br>
-        {{tweet.created_at}}</p>
+{% for tweet in object_list %}
         <p>[内容]
             <br>{{tweet.content}}
         </p>
