--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     {% if user.is_authenticated %}
     <li><a href="{% url 'accounts:logout' %}">logout</a></li>
     <li><a href="{% url 'tweets:create' %}">Create Tweet</a></li>
+    <li><a href="{% url 'accounts:user_profile' request.user %}">あなたのプロフィール</a></li>
     {% else %}
     <li><a href="{% url 'accounts:signup' %}">Sign up</a></li>
     <li><a href="{% url 'accounts:login' %}">login</a></li>
@@ -27,5 +28,4 @@
   {% endblock %}
   <!-- /main -->
 </body>
-
 </html>
