--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -18,11 +18,16 @@
 <a href="{% url 'accounts:following_list' username=profile_user %}"><p>フォロー数：{{following_number}}</p></a>
 <a href="{% url 'accounts:follower_list' username=profile_user %}"><p>フォロワー数：{{follower_number}}</p></a>
     <h3>過去のツイート</h3>
-{% for tweet in object_list %}
-        <p>[内容]
-            <br>{{tweet.content}}
-            <p id="like-count-{{ tweet.id }}">{{ tweet.like_count }} 件のいいね</p>
-        </p>
-        <a href="{% url 'tweets:detail' tweet.pk %}">詳細</a>
-{% endfor %}
+    {% for tweet in tweets %}
+    <div class="tweet">
+        <p>{{ tweet.content }}</p>
+        <p id="like-count-{{ tweet.id }}">{{ tweet.like_count }} 件のいいね</p>
+        {% if tweet.liked_by_user %}
+        <button type="button" class="like-button" id="like-button-{{ tweet.id }}" data-tweet-id="{{ tweet.id }}" data-liked="true">いいね取り消し</button>
+        {% else %}
+        <button type="button" class="like-button" id="like-button-{{ tweet.id }}" data-tweet-id="{{ tweet.id }}" data-liked="false">いいね</button>
+        {% endif %}
+    </div>
+    {% endfor %}
+    {% include "tweets/script.html" %}
 {% endblock %}
